--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+#planets{
+  border: 4px solid black;
+}
+
 td,
 th {
   border: 1px solid;
@@ -10,21 +14,24 @@ th {
 }
 
 .plnt__img:hover{
-  box-shadow: 10px 5px 4px green;
+  box-shadow: 10px 5px 4px red;
 }
 
 .mass, 
 .diameter,
 .sun,
-.numMoon{
+.numMoon,
+.orbit,
+.lenDays,
+.ring{
   word-break: break-all;
   white-space: pre-line;
 }
 
-.text{
-
+.txt{
+  text-align: center;
 }
 
-td:nth-child(even){
-  background-color: blue;
+tr:nth-child(even):hover{
+  background-color: aquamarine;
 }
