--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Faculty+Glyphic&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+*{
+  font-family: "Montserrat", sans-serif;
+}
+
 #planets{
   border: 4px solid black;
 }
@@ -5,6 +12,7 @@
 td,
 th {
   border: 1px solid;
+  font-family: "Faculty Glyphic", sans-serif;
 }
 
 /* planet image */
@@ -30,12 +38,23 @@ th {
 
 .txt{
   text-align: center;
+  
 }
 
 .heading{
+  background-color: bisque;
   text-align: left;
+}
+
+tr:nth-child(even){
+  background-color: rgb(255, 255, 255);
 }
 
 tr:nth-child(even):hover{
   background-color: aquamarine;
+  transition: background-color 3s ease;
+}
+
+.last:hover{
+  background-color: rgb(250, 250, 250);
 }
