--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ th {
   font-family: "Faculty Glyphic", sans-serif;
 }
 
+.title{
+  font-size: 20px;
+}
+
 /* planet image */
 .plnt__img{
   padding: 15px;
