--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Faculty+Glyphic&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Faculty+Glyphic&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
-*{
+* {
   font-family: "Montserrat", sans-serif;
 }
 
-#planets{
+body {
+  background-image: url("../image/galxy.jpeg");
+  background-position: center;
+  background-size: 1600px 850px;
+  background-repeat: no-repeat;
+}
+
+#planets {
   border: 4px solid black;
+  margin: auto;
+}
+
+h1 {
+  color: azure;
+  text-align: center;
+  font-size: 60px;
 }
 
 td,
@@ -15,55 +29,51 @@ th {
   font-family: "Faculty Glyphic", sans-serif;
 }
 
-.title{
+.title {
   font-size: 20px;
 }
 
 /* planet image */
-.plnt__img{
+.plnt__img {
   padding: 15px;
   border-radius: 100px;
 }
 
-.title{
+.title {
   background-color: white;
 }
 
-.title:hover{
+.title:hover {
   box-shadow: 10px 5px 4px red;
   transition: box-shadow 4s ease;
 }
 
-.mass, 
+.mass,
 .diameter,
 .sun,
 .numMoon,
 .orbit,
 .lenDays,
-.ring{
+.ring {
   word-break: break-all;
   white-space: pre-line;
 }
 
-.txt{
+.txt {
+  background-color: white;
+  color: black;
   text-align: center;
-  
 }
 
-.heading{
+.heading {
   background-color: bisque;
   text-align: left;
 }
 
-tr:nth-child(even){
-  background-color: rgb(255, 255, 255);
+tr:nth-child(even) {
+  background-color: white;
 }
 
-tr:nth-child(even):hover{
-  background-color: aquamarine;
-  transition: background-color 3s ease;
-}
-
-.last:hover{
+.last:hover {
   background-color: rgb(250, 250, 250);
 }
